# leaderboard-sample

./: .gitignore  .pre-commit-config.yaml  README.md  index.html  pyproject.toml
.github/workflows/: bench-report.yml  ruff.yml
agents/agent_baseline/: agent.py
agents/agent_v1/: agent.py
agents/baseline/: agent.py
agents/gemini_2_5_flash/: agent.py
agents/with_code_executor/: agent.py
agents/with_google_search/: agent.py
benchmarks/: task1.json  task2.json  task4.json  task_001.json  task_002.json  task_003.json  task_004.json  task_005.json
results/: benchmark_cache.json  benchmark_results.json  gemini_2_5_flash.json
src/: evaluator.py  reporter.py  runner.py
src/templates/: leaderboard.html
